--- a/debug.html
+++ b/debug.html
@@ -5,7 +5,7 @@
 		<link rel="shortcut icon" href="assets/favicon.ico">
 		<!-- -->
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="viewport" content="width=device-width initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="viewport" content="height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<!-- enyo (debug) -->
 		<script src="enyo/enyo.js"></script>
 		<!-- application (debug) -->
